<resources>
    <string name="app_name">Store App</string>

    <string name="book_details">Book Details</string>

    <string name="get_started_by_adding_a_book">Get started by adding a book!</string>

    <string name="book_menu_add_a_test_book">Add a test book</string>

    <string name="book_menu_delete_all_books">Delete all books</string>

    <string name="edit_book_menu_save">Save a book</string>

    <string name="edit_book_menu_delete">Delete a book</string>

    <string name="adapter_name">Book name</string>

    <string name="adapter_author">Author</string>

    <string name="adapter_quantity">Quantity: </string>

    <string name="adapter_sup_name">Supplier Name</string>

    <string name="adapter_sup_email">Email Address</string>

    <string name="adapter_sup_phone">Phone Number</string>

    <string name="settings">Settings</string>

    <string name="overview">Overview</string>

    <string name="update_quantity">Update</string>

    <string name="order_edit">Order</string>

    <string name="supplier_info">Supplier info</string>

    <string name="image">Image</string>

    <string name="book">Paper Book</string>

    <string name="ebook">Ebook</string>

    <string name="phone">991</string>

    <string name="audio_book">Audio Book</string>

    <string name="add_a_book">Add a book</string>

    <string name="edit_a_book">Edit a book</string>

    <string name="book_saved">Book saved</string>

    <string name="error_with_saving_book">Error with saving book</string>

    <string name="book_update_failed">Book update failed</string>

    <string name="book_updated">Book updated</string>

    <string name="error_with_deleting_a_book">Error with deleting a book</string>

    <string name="book_deleted">Book deleted</string>

    <string name="delete_this_book">Delete this book?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="discard_your_changes_and_quit_editing">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep editing</string>

    <string name="sell">Sell</string>

    <string name="order">Order</string>

    <string name="cannot_save_a_blank_item">Cannot save a blank item</string>

    <string name="adapter_price">Price: </string>

    <string name="are_you_sure">Are you sure to wanna add one more book?</string>

    <string name="you_cannot_decrease_quantity">You cannot decrease quantity!</string>

    <string name="minus_value">You cannot add minus value!</string>

    <string name="adding_a_new_book">Add a book</string>

    <string name="please_add_a_book_name">Please add a book name</string>

    <string name="please_add_a_book_author">Please add a book author</string>

    <string name="please_add_price">Are you sure about price</string>

    <string name="please_add_quantity">Are you sure about quantity</string>

    <string name="please_add_sup_name">Please add a supplier name</string>

    <string name="pleae_add_sup_email">Please add supplier email address</string>

    <string name="please_add_sup_phone">Please add supplier phone number</string>

    <string name="book_title_is_required">Book title is required</string>

    <string name="book_author_is_required">Book author is required</string>

    <string name="book_supplier_name_is_required">Book supplier name is required</string>

    <string name="book_supplier_email_addredd_is_required">Book supplier email address is required</string>

    <string name="book_supplier_phone_number_is_required">Book supplier phone name is required</string>

    <string name="minus">-</string>

    <string name="plus">+</string>


</resources>
