<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:id="@+id/book_detail_ly"
    tools:context="com.example.android.storeapp.BookDetailActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/overview"
            android:text="@string/overview"
            android:paddingTop="@dimen/activity_margin"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:paddingLeft="40dp"
            android:paddingTop="@dimen/activity_margin"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/adapter_name"
                android:id="@+id/detail_name"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/adapter_author"
                android:id="@+id/detail_author"
                android:textColor="@color/colorAccent"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/detail_price"
                android:text="@string/adapter_price"
                android:textColor="@color/colorAccent"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/detail_quantity"
                android:text="@string/adapter_quantity"
                android:textColor="@color/colorAccent"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/supplier"
            android:text="@string/supplier_info"
            android:paddingTop="@dimen/activity_margin"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:paddingLeft="17dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/activity_margin"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_sup_name"
                android:text="@string/adapter_sup_name"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/detail_sup_email"
                android:text="@string/adapter_sup_email"
                android:textColor="@color/colorAccent"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/detail_sup_phone"
                android:text="@string/adapter_sup_phone"
                android:textColor="@color/colorAccent"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/image_settings"
            android:text="@string/image"
            android:paddingTop="@dimen/activity_margin"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:paddingTop="@dimen/activity_margin"
            android:paddingLeft="40dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/detail_image_spinner"
                android:spinnerMode="dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
