<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adapter_name"
        android:text="@string/adapter_name"
        android:layout_marginTop="10dp"
        android:textColor="#795548"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/adapter_author"
        android:text="@string/adapter_author"
        android:layout_marginTop="10dp"
        android:layout_below="@id/adapter_name"
        android:textColor="#795548"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/adapter_lin"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/adapter_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/adapter_quantity"
            android:text="@string/adapter_quantity"
            android:textColor="#795548"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/adapter_quantity_list"
            android:text="12"
            android:textColor="#795548"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <TextView
        android:id="@+id/adapter_phone"
        android:layout_below="@id/adapter_lin"
        android:text="0770152804"
        android:layout_marginTop="10dp"
        android:textColor="#795548"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <ImageButton
            android:id="@+id/adapter_image"
            android:layout_width="85dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="57dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/b_a" />

         <LinearLayout
             android:layout_marginTop="12dp"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">

            <Button
                android:id="@+id/sell_list_view"
                android:text="@string/sell"
                android:textSize="14dp"
                android:background="@drawable/button_drawable"
                android:textStyle="bold"
                android:textColor="#795548"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

             <Button
                 android:id="@+id/order_list_view"
                 android:layout_marginLeft="10dp"
                 android:text="@string/order"
                 android:background="@drawable/button_drawable"
                 android:textStyle="bold"
                 android:textSize="14dp"
                 android:textColor="#795548"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />

         </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:id="@+id/adapter_linear"
        android:orientation="horizontal"
        android:layout_below="@id/adapter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/adapter_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#795548"
            android:layout_marginTop="10dp"
            android:text="@string/adapter_price" />


        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/adapter_price_list"
            android:text="1"
            android:textColor="#795548"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>